--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Your Name</title>
+  <title>Samuel Salvaggio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -11,20 +11,31 @@
       font-family: sans-serif;
       background: #fff;
       color: #111;
-      max-width: 600px;
-      margin: auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
     }
+
+    main {
+      max-width: 600px;
+      width: 100%;
+    }
+
     h1 {
       font-size: 2em;
       margin-bottom: 0.5em;
     }
+
     p {
       line-height: 1.6;
     }
+
     a {
       color: inherit;
       text-decoration: underline;
     }
+
     footer {
       margin-top: 3em;
       font-size: 0.9em;
@@ -32,8 +43,10 @@
   </style>
 </head>
 <body>
-  <h1>Samuel Salvaggio</h1>
-  <p><a href="mailto:you@example.com">contact@salvaggio.me</a> / <a href="https://www.linkedin.com/in/samuelsalvaggio/">LinkedIn</a></p>
-  <footer>&copy; 2025 Samuel Salvaggio</footer>
+  <main>
+    <h1>Samuel Salvaggio</h1>
+    <p><a href="mailto:contact@salvaggio.me">contact@salvaggio.me</a> / <a href="https://www.linkedin.com/in/samuelsalvaggio/">LinkedIn</a></p>
+    <footer>&copy; 2025 Samuel Salvaggio</footer>
+  </main>
 </body>
 </html>
