--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
   <style>
     body {
       margin: 0;
-      padding: 40px;
       font-family: sans-serif;
       background: #fff;
       color: #111;
       display: flex;
-      flex-direction: column;
       align-items: center;
+      justify-content: center;
       min-height: 100vh;
+      text-align: center;
+      padding: 40px;
     }
 
     main {
