--- a/index.html
+++ b/index.html
@@ -5,22 +5,25 @@
   <title>Samuel Salvaggio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body {
+    html, body {
       margin: 0;
-      font-family: sans-serif;
+      padding: 0;
+      height: 100%;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", sans-serif;
       background: #fff;
       color: #111;
+    }
+
+    body {
       display: flex;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
       text-align: center;
-      padding: 40px;
     }
 
     main {
       max-width: 600px;
-      width: 100%;
+      padding: 40px;
     }
 
     h1 {
