--- a/index.html
+++ b/index.html
@@ -32,11 +32,6 @@
       padding: 40px;
     }
 
-    footer {
-      margin: 20px 0;
-      font-size: 0.9em;
-    }
-
     h1 {
       font-size: 2em;
       margin-bottom: 0.5em;
@@ -44,19 +39,26 @@
 
     p {
       line-height: 1.6;
+      margin: 0.5em 0;
     }
 
     a {
       color: inherit;
       text-decoration: underline;
     }
+
+    .company {
+      margin-top: 1.5em;
+      font-weight: 500;
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Samuel Salvaggio</h1>
+    <p>I'm a statistician and clinical trial design lead living in Brussels.</p>
     <p><a href="mailto:contact@salvaggio.me">contact@salvaggio.me</a> / <a href="https://www.linkedin.com/in/samuelsalvaggio/">LinkedIn</a></p>
+    <div class="company">One2Treat</div>
   </div>
-  <footer>&copy; 2025 Samuel Salvaggio</footer>
 </body>
 </html>
