--- a/index.html
+++ b/index.html
@@ -57,8 +57,4 @@
   <div class="container">
     <h1>Samuel Salvaggio</h1>
     <p>I'm a statistician and clinical trial design lead living in Brussels.</p>
-    <p><a href="mailto:contact@salvaggio.me">contact@salvaggio.me</a> / <a href="https://www.linkedin.com/in/samuelsalvaggio/">LinkedIn</a></p>
-    <div class="company">One2Treat</div>
-  </div>
-</body>
-</html>
+    <p><a href="mailto:
