--- a/index.html
+++ b/index.html
@@ -61,14 +61,8 @@
 <body>
   <div class="container">
     <h1>Samuel Salvaggio</h1>
-    <p>I'm a statistician and clinical trial design lead living in Brussels.</p>
-    <p><a href="mailto:contact@salvaggio.me">contact@salvaggio.me</a> / <a href="https://www.linkedin.com/in/samuelsalvaggio/">LinkedIn</a></p>
-    <div class="company">
-      <a href="https://www.one2treat.com" target="_blank" rel="noopener noreferrer">One2Treat</a>
-    </div>
-    <div class="publications">
-      <a href="https://scholar.google.com/citations?user=iVCYe1EAAAAJ&hl=fr&oi=ao" target="_blank" rel="noopener noreferrer">Publications</a>
-    </div>
+    <p><a href="mailto:contact@salvaggio.me">contact@salvaggio.me</a> / <a href="https://www.linkedin.com/in/samuelsalvaggio/">LinkedIn</a> 
+      / <a href="https://scholar.google.com/citations?user=iVCYe1EAAAAJ&hl=fr&oi=ao">publications</a></p>
   </div>
 </body>
 </html>
