--- a/index.html
+++ b/index.html
@@ -46,23 +46,16 @@
       color: inherit;
       text-decoration: underline;
     }
-
-    .company {
-      margin-top: 1.5em;
-      font-weight: 500;
-    }
-
-    .publications {
-      margin-top: 0.5em;
-      font-size: 0.95em;
-    }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Samuel Salvaggio</h1>
-    <p><a href="mailto:contact@salvaggio.me">contact@salvaggio.me</a> / <a href="https://www.linkedin.com/in/samuelsalvaggio/">LinkedIn</a> 
-      / <a href="https://scholar.google.com/citations?user=iVCYe1EAAAAJ&hl=fr&oi=ao">publications</a></p>
+    <p>
+      <a href="mailto:contact@salvaggio.me">contact@salvaggio.me</a> / 
+      <a href="https://www.linkedin.com/in/samuelsalvaggio/">LinkedIn</a> / 
+      <a href="https://scholar.google.com/citations?user=iVCYe1EAAAAJ&hl=fr&oi=ao">Publications</a>
+    </p>
   </div>
 </body>
 </html>
