--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <title>Samuel Salvaggio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      font-family: 'Montserrat', sans-serif;
       background: #fff;
       color: #111;
     }
@@ -54,8 +55,4 @@
     <p>
       <a href="mailto:contact@salvaggio.me">contact@salvaggio.me</a> / 
       <a href="https://www.linkedin.com/in/samuelsalvaggio/">LinkedIn</a> / 
-      <a href="https://scholar.google.com/citations?user=iVCYe1EAAAAJ&hl=fr&oi=ao">Publications</a>
-    </p>
-  </div>
-</body>
-</html>
+      <a href="https://scholar.google.com/citations?user=iVCYe1EAAAAJ&hl=fr&oi=ao">Publications
