--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       font-family: 'Montserrat', sans-serif;
       background: #fff;
       color: #111;
+      font-size: 15px;
     }
 
     body {
@@ -30,17 +31,17 @@
       align-items: center;
       flex: 1;
       max-width: 600px;
-      padding: 40px;
+      padding: 32px;
     }
 
     h1 {
-      font-size: 2em;
-      margin-bottom: 0.5em;
+      font-size: 1.6em;
+      margin-bottom: 0.4em;
     }
 
     p {
-      line-height: 1.6;
-      margin: 0.5em 0;
+      line-height: 1.4;
+      margin: 0.4em 0;
     }
 
     a {
@@ -53,6 +54,10 @@
   <div class="container">
     <h1>Samuel Salvaggio</h1>
     <p>
-      <a href="mailto:contact@salvaggio.me">contact@salvaggio.me</a> / 
-      <a href="https://www.linkedin.com/in/samuelsalvaggio/">LinkedIn</a> / 
-      <a href="https://scholar.google.com/citations?user=iVCYe1EAAAAJ&hl=fr&oi=ao">Publications
+      <a href="mailto:contact@salvaggio.me">contact@salvaggio.me</a> /
+      <a href="https://www.linkedin.com/in/samuelsalvaggio/">LinkedIn</a> /
+      <a href="https://scholar.google.com/citations?user=iVCYe1EAAAAJ&hl=fr&oi=ao">Publications</a>
+    </p>
+  </div>
+</body>
+</html>
