--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
   <div class="container">
     <h1>Samuel Salvaggio</h1>
     <p>
-      <a href="mailto:contact@salvaggio.me">contact@salvaggio.me</a> /
-      <a href="https://www.linkedin.com/in/samuelsalvaggio/">LinkedIn</a> /
-      <a href="https://scholar.google.com/citations?user=iVCYe1EAAAAJ&hl=fr&oi=ao">Publications</a>
+      <a href="mailto:contact@salvaggio.me">e-mail</a> /
+      <a href="https://www.linkedin.com/in/samuelsalvaggio/">linkedIn</a> /
+      <a href="https://scholar.google.com/citations?user=iVCYe1EAAAAJ&hl=fr&oi=ao">publications</a>
     </p>
   </div>
 </body>
