back without logos.

--- a/index.html
+++ b/index.html
@@ -4,16 +4,8 @@
   <meta charset="UTF-8">
   <title>Samuel Salvaggio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-..."
-        crossorigin="anonymous" referrerpolicy="no-referrer"/>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
-    :root {
-      --icon-size: 1.35rem;
-      --icon-gap: 1.1rem;
-    }
     html, body {
       margin: 0;
       padding: 0;
@@ -56,38 +48,16 @@
       color: inherit;
       text-decoration: underline;
     }
-    
-    .links { display:flex; justify-content:center; gap:var(--icon-gap); }
-    .links a {
-      font-size:var(--icon-size);
-      color:#111; text-decoration:none;
-      transition:transform .2s ease;
-    }
-    .links a:hover,
-    .links a:focus {
-      transform:scale(1.15);
-      outline:none;
-    }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Samuel Salvaggio</h1>
-
-    <!-- ③ link icons -->
-    <nav class="links">
-      <a href="mailto:contact@salvaggio.me"  aria-label="Email">
-        <i class="fas fa-envelope"></i>
-      </a>
-      <a href="https://www.linkedin.com/in/samuelsalvaggio/" target="_blank"
-         rel="noopener" aria-label="LinkedIn">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="https://scholar.google.com/citations?user=iVCYe1EAAAAJ"
-         target="_blank" rel="noopener" aria-label="Publications">
-        <i class="fas fa-book-open"></i>
-      </a>
-    </nav>
+    <h1>Samuel Salvaggio</h1>
+    <p>
+      <a href="mailto:contact@salvaggio.me">e-mail</a> /
+      <a href="https://www.linkedin.com/in/samuelsalvaggio/">linkedIn</a> /
+      <a href="https://scholar.google.com/citations?user=iVCYe1EAAAAJ&hl=fr&oi=ao">publications</a>
+    </p>
   </div>
 </body>
 </html>
