--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <p>
       <a href="mailto:contact@salvaggio.me">e-mail</a> /
       <a href="https://www.linkedin.com/in/samuelsalvaggio/">linkedIn</a> /
-      <a href="https://scholar.google.com/citations?user=iVCYe1EAAAAJ&hl=fr&oi=ao">publications</a>
+      <a href="https://www.salvaggio.me/publications.pdf">publications</a>
     </p>
   </div>
 </body>
