--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Samuel Salvaggio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Samuel Salvaggio – Senior Trial Design Lead @ One2Treat | Lecturer @ ULB School of Public Health">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
     html, body {
@@ -13,7 +14,7 @@
       font-family: 'Montserrat', sans-serif;
       background: #fff;
       color: #111;
-      font-size: 15px;
+      font-size: 16px;
     }
 
     body {
@@ -40,24 +41,30 @@
     }
 
     p {
-      line-height: 1.4;
+      line-height: 1.5;
       margin: 0.4em 0;
     }
 
     a {
       color: inherit;
-      text-decoration: underline;
+      text-decoration: none;
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 1px;
+    }
+    a:hover,
+    a:focus {
+      border-bottom-color: #111;
     }
   </style>
 </head>
 <body>
-  <div class="container">
+  <main class="container">
     <h1>Samuel Salvaggio</h1>
     <p>
       <a href="mailto:contact@salvaggio.me">e-mail</a> /
       <a href="https://www.linkedin.com/in/samuelsalvaggio/">linkedIn</a> /
       <a href="https://www.salvaggio.me/publications.pdf">publications</a>
     </p>
-  </div>
+  </main>
 </body>
 </html>
