--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Samuel Salvaggio – Senior Trial Design Lead @ One2Treat | Lecturer @ ULB School of Public Health">
   
-  <link rel="preload" as="image" href="picture.png">
+  <link rel="preload" as="image" href="picture.jpg">
   
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
@@ -102,7 +102,7 @@
 </head>
 <body>
   <main class="container">
-    <img src="picture.png" alt="Samuel Salvaggio" class="profile-pic" width="150" height="150">
+    <img src="picture.jpg" alt="Samuel Salvaggio" class="profile-pic" width="150" height="150">
     
     <h1>Samuel Salvaggio</h1>
     <p class="links-container">
